manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calico-demo
  labels:
    name: calico-demo
